--- a/css/main2.css
+++ b/css/main2.css
@@ -1,12 +1,25 @@
+nav {
+    width: 400px;
+}
 p {
     font-size: x-large;
     color:darkblue;
+    width: 350px;
+    text-transform: capitalize;
 }
 
 body {
-    max-width: 996px;
-    max-height: 616;
+    width: 996px;
+    height: 616;
     margin-right: auto;
     margin-left: auto;
     background-color: aliceblue;
+}
+
+div {
+    display: flex;
+}
+
+a {
+    target-name: new;
 }
